metadata/force-app/main/default/objects/CustomName_SYQSm__c/CustomName_SYQSm__c.object-meta.xml
<CustomObject>
    <description>Description_cqEvQ</description>
    <label>CustomLabel_QPbfQ</label>
    <nameField>
        <label>CustomLabel_QPbfQ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_QPbfQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>