metadata/force-app/main/default/objects/CustomName_SYQSm__c/fields/CustomField_Gbkxx__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Gbkxx__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldEcSeu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>