metadata/force-app/main/default/objects/CustomName_SYQSm__c/fields/CustomField_PTBLv__c.field-meta.xml
<CustomField>
    <fullName>CustomField_PTBLv__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldoQEwL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>